<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_ACTION_GET_CONTENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ACTION_GET_CONTENT" />

    <TextView
        android:id="@+id/text_ACTION_GET_CONTENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_ACTION_OPEN_DOCUMENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ACTION_OPEN_DOCUMENT" />

    <TextView
        android:id="@+id/text_ACTION_OPEN_DOCUMENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_data" />

        <EditText
            android:id="@+id/text_ACTION_CREATE_DOCUMENT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/button_ACTION_CREATE_DOCUMENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ACTION_CREATE_DOCUMENT" />

</LinearLayout>
